--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -43,6 +43,11 @@ default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
 
+
+
+ask.question=Ask question!
+recent.tags=Recent Tags
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
