--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -42,7 +42,43 @@ default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
+home.label=Home
+login.label=Login
+register.label=Register
 
+newest.label=Newest
+mostviewed.label=Most Viewed
+mostvoted.label=Most Voted
+
+
+questions.label=Questions
+tags.label=Tags
+users.label=Users
+badges.label=Badges
+askquestion.label=Ask Question
+
+
+question.label=Question
+tag.label=Tag
+user.label=User
+badge.label=Badge
+
+comment.label=Comment
+comments.label=Comments
+
+answer.label=Answer
+answers.label=Answers
+
+
+view.label=View
+views.label=Views
+vote.label=Vote
+votes.label=Votes
+
+created.label=Created
+logout.label=Logout
+about.label=About
+contact.label=Contact
 
 
 ask.question=Ask question!
