--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -17,3 +17,38 @@ default.not.unique.message=La propriété [{0}] de la classe [{1}] avec la valeu
 
 default.paginate.prev=Précédent
 default.paginate.next=Suivant
+home.label=Accueil
+login.label=Se connecter
+register.label=S'enregistrer
+
+newest.label= Récentes
+mostviewed.label=Les plus vues
+mostvoted.label=Les plus votées
+
+questions.label=Questions
+tags.label=Catégories
+users.label=Utilisateurs
+badges.label=Badges
+askquestion.label=Poser une question
+
+
+question.label=Question
+tag.label=Catégorie
+user.label=Utilisateur
+badge.label=Badge
+
+comment.label=Commentaire
+comments.label=Commentaires
+answer.label=Réponse
+answers.label=Réponses
+
+view.label=Vue
+views.label=Vues
+vote.label=Vote
+votes.label=Votes
+
+created.label=Créée le 
+about.label=A propos
+contact.label=Contactez-nous
+logout.label=Se déconnecter
+recent.tags=Catégories récentes
