Add missing translations

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -65,9 +65,12 @@ badge.label=Badge
 
 comment.label=Comment
 comments.label=Comments
+comment.textbox=Leave a comment
 
 answer.label=Answer
 answers.label=Answers
+answer.answered=answered
+answer.youranswer=Your answer
 
 
 view.label=View
