--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -39,8 +39,13 @@ badge.label=Badge
 
 comment.label=Commentaire
 comments.label=Commentaires
+comment.textbox=Laise un commentaire
+
 answer.label=Réponse
 answers.label=Réponses
+answer.answered=Répondu
+answer.youranswer=Votre réponse
+
 
 view.label=Vue
 views.label=Vues
